deployments/apps/terraria/01-terraria.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terraria
  namespace: terraria
spec:
  selector:
    matchLabels:
      app: terraria
  template:
    metadata:
      labels:
        app: terraria
    spec:
      volumes:
        - name: terraria-data
          persistentVolumeClaim:
            claimName: terraria-pvc
      containers:
      - name: terraria
        image: hexlo/terraria-server-docker
        resources:
          limits:
            cpu: '3500m'
            memory: '5Gi'
          requests:
            cpu: '500m'
            memory: '500Mi'
        ports:
        - containerPort: 7777
        volumeMounts:
        - mountPath: "/root/.local/share/Terraria/Worlds"
          name: terraria-data
---
apiVersion: v1
kind: Service
metadata:
  name: terraria-svc
  namespace: terraria
spec:
  selector:
    app: terraria
  ports:
  - port: 7777
