deployments/apps/terraria/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: terraria-ingress
  namespace: terraria
spec:
  entryPoints:
    - minecraft
  routes:
  - match: HostSNI(`*`)
    services:
    - name: terraria-svc
      port: 7777
